# DSnake

./: .gitignore  CMakeLists.txt  README.md
include/: game.h  snake.h
src/: game.c  main.c  snake.c
